API improvements and better error handling
This adds in more explicit error handling in the API, as well as:

- changing response type of /signingCert to
  application/pem-certificate-chain
- uses oidc.IDToken as authentication principal in go-swagger

Fixes #38
